все модули компилируются. в профиле нет тестов)